# cmake_samples

cmake_and_libraries_part1/: CMakeLists.txt
cmake_and_libraries_part1/greeter/: CMakeLists.txt
cmake_and_libraries_part1/greeter/includes/: greeter.h
cmake_and_libraries_part1/greeter/src/: greeter.c
cmake_and_libraries_part1/hello_app/: CMakeLists.txt
cmake_and_libraries_part1/hello_app/src/: main.c
cmake_and_libraries_part2/: CMakeLists.txt
cmake_and_variables/: CMakeLists.txt
cmake_and_variables/includes/: greeter.h
cmake_out_of_source_build/: CMakeLists.txt
simplest_cmake/: CMakeLists.txt  greeter.c
